# MachineLearning_BootCamp

./: LICENSE  README.md  pyproject.toml
artifacts/: test.csv  train.csv
src/: exception.py  logger.py
src/components/: data_ingestion.py
