[project]
name = "machinelearning-bootcamp"
version = "1.0.0"
description = "This is Production Ready Machine Learning Code Structure"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "chandan chaudhari", email = "chaudhari.chandan22@gmail.com" }
]

dependencies = [
    "chandan-aiops>=1.5.5",
    "dvc>=3.67.0",
    "fastapi>=0.135.1",
    "flaml[automl]>=2.5.0",
    "flask>=3.1.3",
    "gradio>=6.9.0",
    "imblearn>=0.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
